2008-08-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/Exit.3:                  do not call Tcl_Finalize implicitly
	* generic/tclEvent.c:          on DLL_PROCESS_DETACH as it may lead
	* win/tclWin32Dll.c (DllMain): to issues and the user should be
	explicitly calling Tcl_Finalize before unloading regardless.
	Clarify the docs to note the explicit need in embedded use.

2008-08-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Revised timing of the CmdFrame stack management
	* tests/info.test:	in TclEvalEx so that the CmdFrame will still
	be on the stack at the time Tcl_LogCommandInfo is called to append
	another level of -errorinfo information.  Sets the stage to add
	file and line data to the stack trace.  Added test to check that
	[info frame] functioning remains unchanged by the revision.

2008-07-31  Miguel Sofer  <msofer@users.sf.net>

	* tests/NRE.test:  replaced all deep-recursing tests by shallower
	tests that actually measure the C-stack depth. This makes them
	bearable again (even under memdebug) and avoid crashing on failure.
	
	* generic/tclBasic.c:   NR-enabling [catch], [if] and [for] and
	* generic/tclCmdAH.c:   [while] (the script, not the tests)
	* generic/tclCmdIL.c:
	* generic/tclCmdMZ.c:
	* generic/tclInt.h:
	* tests/NRE.test:

	* generic/tclBasic.c:   Moved the few remaining defs from tclNRE.h to
	* generic/tclDictObj.c: tclInt.h, eliminated inclusion of tclNRE.h
	* generic/tclExecute.c: everywhere.
	* generic/tclInt.h:
	* generic/tclInterp.c:
	* generic/tclNRE.h (removed):
	* generic/tclNamesp.c:
	* generic/tclOOBasic.c:
	* generic/tclOOInt.h:
	* generic/tclProc.c:
	* generic/tclTest.c:
	* unix/Makefile.in:

2008-07-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Improved tailcalls.
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	* generic/tclTest.c:
	* tests/NRE.test:

	* generic/tclBasic.c (TclNREvalObjEx): new comments and code reorg
	to clarify what is happening.
